# toast-lettuce-test-package-version-splat

./: .gitignore  README.md  pyproject.toml
scripts/: matching-versions.sh  publish-testpypi.sh  resolution-endpoints.sh
src/toast_lettuce_test_package_omni_version/: __init__.py  versions.py
src/toast_lettuce_test_package_version_splat/: versions.py
