[project]
name = "toast-lettuce-test-package-omni-version"
version = "0.1.0"
description = "Publish versions covering every legal PEP 440 suffix form."
readme = "README.md"
authors = [
    { name = "Tom V", email = "toast-lettuce@viner.tv" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
canonical-version-matrix = "toast_lettuce_test_package_omni_version.versions:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
